--- a/MyfirstHtml.html
+++ b/MyfirstHtml.html
@@ -18,6 +18,11 @@
     <p>Index: <span id="Indexvalue"></span></p>
     <p>BIndex: <span id="Indexvalue1"></span></p>
     <button onclick="changeName()">이름 변경</button>
+
+    <p><a href="http://www.naver.com" title="naver" target="_blank">favorite website</a></p>
+    <input type="text" disabled="disabled"/>
+    <br>
+    <input type="text" />
     
     <script>
         let names = ["ABC","DEF","GHI"];
